# chain-of-thought-mcp-server

./: .env  README.md  ai-blindspots.txt  main.py  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: global.mdc
src/: groq_client.py  server.py
src/think_mcp/: __main__.py  server.py
