[project]
name = "chain-of-thought-mcp"
version = "0.1.0"
description = "A MCP server that uses Groq's API to call LLMs which expose raw chain-of-thought tokens."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.20.0",
    "mcp[cli]>=1.5.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.3",
    "requests>=2.32.3",
]
